tests/error/struct_errors/duplicate_field.err
Error: Duplicate field (at $FILE:11:4)
   | 
 9 | class MyStruct:
10 |     x: int
11 |     x: bool
   |     ^ Struct `MyStruct` already contains a field named `x`

Guppy compilation failed due to 1 previous error
